# aidevs

./: .env.example  .gitignore  pyproject.toml
aidevs/: api_aidevs.py  api_openai.py  env.py  openai_proxy.py  task_api.py  validator.py
aidevs/aidevs/: env.py  task_api.py
aidevs/day-1/: day_1.py  task_helloapi.py
aidevs/day-10/: task_functions.py
aidevs/day-11/: task_rodo.py
aidevs/day-12/: task_scraper.py
aidevs/day-13/: task_whoami.py
aidevs/day-14/: task_search.py
aidevs/day-15/: task_people.py
aidevs/day-16/: apis.py  task_knowledge.py
aidevs/day-17/: apis.py  functions.py  task_tools.py
aidevs/day-18/: task_gnome.py
aidevs/day-19/: task_ownapi.py
aidevs/day-20/: docker-compose.yml  qdrant_facade.py  task_ownapipro.py  tools.py
aidevs/day-4/: moderation.py  task_blogger.py  task_moderation.py
aidevs/day-5/: liar.py  task_liar.py
aidevs/day-7/: inprompt.py  task_inprompt.py
aidevs/day-8/: task_embedding.py
aidevs/day-9/: task_whisper.py
