[tool.poetry]
name = "aidevs"
version = "0.1.0"
description = ""
authors = ["Sylwester Rogalski <rsylwester@icloud.com>"]

[tool.poetry.dependencies]
python = ">=3.11.8,<3.13"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
openai = "^1.14.2"
openai-whisper = "^2.1.5"
tqdm = "^4.66.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
