[tool.poetry]
name = "aidevs"
version = "0.1.0"
description = ""
authors = ["Sylwester Rogalski <rsylwester@icloud.com>"]

[tool.poetry.dependencies]
python = ">=3.11.8,<3.13"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
openai = "^1.14.3"
tqdm = "^4.66.2"
llama-index = "^0.10.27"
llama-index-vector-stores-qdrant = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
