[tool.poetry]
name = "aidevs"
version = "0.1.0"
description = ""
authors = ["Sylwester Rogalski <rsylwester@icloud.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
openai = "^1.14.3"
tqdm = "^4.66.2"
llama-index = "^0.10.27"
llama-index-vector-stores-qdrant = "^0.1.6"
fuzzywuzzy = "^0.18.0"
llama-index-embeddings-huggingface = "^0.2.0"
sentence-transformers = "^2.6.1"
sacremoses = "^0.1.1"
python-restcountries = "^2.0.0"
pendulum = "^3.0.0"
langchain-core = "^0.1.42"
langchain = "^0.1.16"
langchain-openai = "^0.1.3"
flask = "^3.0.3"
pyngrok = "^7.1.6"
qdrant-client = "^1.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
